# hyspecppt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: actions.yml  hyspecplanningtools.yml  hyspecppt.yml  unittest.yml
conda.recipe/: meta.yaml
docs/: conf.py
docs/source/: conf.py  gui.rst  index.rst  installation.rst  theory.rst
docs/source/design/: cfsignatures.rst  hyspecpptclasses.rst  hyspecpptfields.rst  index.rst  polarizationflow.rst  polarizationmodel.rst
scripts/: PPTPmodel-Kyle.py  README.md  polarization.py  show_polarization_plots.py
src/hyspecplanningtools/: __init__.py  _version.py  configuration.py  configuration_template.ini  hyspecplanningtools.py  mainwindow.py
src/hyspecplanningtools/help/: help_model.py
src/hyspecplanningtools/home/: home_model.py  home_presenter.py  home_view.py
src/hyspecppt/: __init__.py  configuration.py  configuration_template.ini  hyspecppt.py  hyspecpptmain.py  mainwindow.py
src/hyspecppt/help/: help_model.py
src/hyspecppt/home/: home_model.py  home_presenter.py  home_view.py
src/hyspecppt/hppt/: experiment_settings.py  hppt_defaults.py  hppt_model.py  hppt_presenter.py  hppt_view.py  hppt_view_validators.py
tests/: conftest.py  test_configuration.py  test_mainwindow.py  test_version.py
tests/hppt_model/: test_HyspecPPTModel.py  test_hyspecpptmodel.py  test_single_crystal_model.py
tests/hppt_presenter/: test_presenter.py
tests/hppt_view/: test_basegui.py  test_interactiveplots.py  test_setdefaults.py  test_validators.py
