[project]
name = "hyspecppt"
description = "Polarization tool for neutrons"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
  # list all runtime dependencies here
]
license = { text = "MIT" }
keywords = ["neutrons", "polarization", "single crystal", "powder"]
readme = "README.md"

[project.urls]
homepage = "https://github.com/neutrons/hyspecppt"  # if no homepage, use repo url
repository = "https://github.com/neutrons/hyspecppt"
# documentation = add_url_to_readthedoc_here
issues = "https://github.com/neutrons/hyspecppt/issues"

[build-system]
requires = [
  "setuptools>= 42",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/hyspecppt/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[project.gui-scripts]
hyspecppt = "hyspecppt.hyspecpptmain:gui"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src", "scripts"
]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "mymarker: example markers goes here"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["A", "ARG","ASYNC","BLE","C90", "D", "E", "F", "I", "N", "UP032", "W"]
ignore = ["D203", # conflict with D211
          "D213", # conflict with D212
          "D205", # conflicts
          "D400", "D401","D404", "N806", "N802", "D107", "D100","D101", "D102", "D415", # Unnecessary
          ]
unfixable = ["F401"]
# Add additional 3rd party tool configuration here as needed
